<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OLSR deployer</string>
    <string name="test_olsr_existence">Test OLSR Existing</string>
    <string name="action_settings">Settings</string>
    <string name="deploy_olsr">Deploy OLSR</string>
    <string name="remove_olsr">Remove OLSR</string>
    <string name="olsr_not_found">OLSR Not Found</string>
    <string name="olsr_found">OLSR Found</string>
    <string name="deploy_wpa_supplicant">Write WPA Supplicant</string>
    <string name="test_wpacli_existence">Test wpa_cli existence</string>
    <string name="deploy_wpacli">Deploy wpa_cli</string>
    <string name="remove_wpacli">Remove wpa_cli</string>
    <string name="empty"/>
    <string name="scan_networks">Scan Networks</string>
    <string name="generateIPAddress">Generate IP Address</string>
    <string name="start_olsr">Start OLSR</string>
    <string name="check_olsr_running">Check OLSR Running</string>
    <string name="title_activity_adhoc">Adhoc</string>
    <string name="title_info">Info</string>
    <string name="title_search_networks">Surrounding Networks</string>
    <string name="button_start_state">Start</string>
    <string name="button_stop_state">Stop</string>
    <string name="button_connecting_state">Connecting</string>
    <string name="txt_connection_state">Connected State:</string>
    <string name="txt_connection_disconnected">DISCONNECTED</string>
    <string name="txt_connection_connected">CONNECTED</string>
    <string name="txt_network_name">Network Name:</string>
    <string name="txt_frequency">Frequency:</string>
    <string name="txt_protection">Protection:</string>
    <string name="txt_protection_none">None</string>
    <string name="txt_protection_wep">WEP</string>
    <string name="txt_password">Password:</string>
    <string name="txt_ip">IP Address:</string>
    <string name="actionbar_search_networks">Search</string>
    <string name="title_activity_setup">Setup</string>
    <string name="menu_startStopOLSR">Start OLSR</string>
    <string name="menu_stopOLSR">Stop OLSR</string>
    <string name="pref_header_about">About</string>
    <string name="preference_file_key">preferences</string>
    <string name="pref_header_extras">Extras</string>
    <string name="pref_title_log_battery">Log battery</string>
    <string name="pref_title_log_battery_filename">Log battery filename</string>
    <string name="pref_title_auto_start_onboot">Auto start on boot</string>
    <string name="pref_default_battery_filename">battery.txt</string>
    <string name="refresh_routing_protocols">Refresh routing protocols</string>
    <string name="routing_protocols">Routing protocols</string>

    <string name="none">None</string>
    <string name="tools">Tools</string>

    <string name="get_know_nodes">Get Known Nodes</string>
    <string name="tool_ping">PING</string>
    <string name="tool_traceroute">Traceroute</string>
    <string name="tool_known_nodes_more_than_one">1+</string>
    <string name="tool_known_nodes_info">This list is built from the routing table. To copy a IP address just long press the item on the list. To see the full line of the routing table, click on the item.</string>
    <string name="gps_warning">Using GPS log consumes big amounts of energy. Be careful.</string>
    <string name="gps_log_file">GPS log file</string>
</resources>