<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_extras">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="log_battery"
            android:title="@string/pref_title_log_battery"/>

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <EditTextPreference
            android:defaultValue="@string/pref_default_battery_filename"
            android:dependency="log_battery"
            android:inputType="text"
            android:key="log_battery_file_name"
            android:title="@string/pref_title_log_battery_filename"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_star_onboot"
            android:title="@string/pref_title_auto_start_onboot"/>
    </PreferenceCategory>
</PreferenceScreen>