<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="pt.it.esoares.android.ui.ToolsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/getKnowNodes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_know_nodes"/>

        <Button
            android:id="@+id/ping"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tool_ping"/>

        <Button
            android:id="@+id/traceroute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tool_traceroute"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Log GPS"
                android:textAppearance="?attr/textAppearanceListItem"/>

            <Button
                android:id="@+id/gps_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/action_settings"/>

            <Button
                android:id="@+id/start_stop_button_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/button_start_state"
                tools:text="@string/button_start_state"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
