<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="protocol"
            type="pt.it.esoares.android.routing.RoutingProtocol"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@{protocol.name}"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:text="@string/none"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:enabled="@{protocol.hasSettings}"
            android:text="@string/action_settings"/>

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:onClick="@{protocol::toggleRun}"
            android:text="@{!protocol.isRunning?@string/button_start_state:@string/button_stop_state}"
            tools:text="@string/button_start_state"/>

    </LinearLayout>
</layout>